<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Midwife Organizer</string>

    <!-- ACTIVITY TITLES -->
    <string name="title_activity_select_time">Select Time</string>
    <string name="title_activity_service_user">Service User</string>
    <string name="title_activity_db_info">Db Info</string>
    <string name="title_activity_http_client">Http Client</string>
    <string name="title_activity_appointment_type_spinner">Appointment Type Spinner</string>
    <string name="title_activity_quick_menu">Quick Menu</string>
    <string name="title_activity_confirm_appointment">Confirm Appointment</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_appointment_calendar">Appointment Calendar</string>
    <string name="title_activity_today_appointment">Today Appointment</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="title_activity_post_natal">Post Natal</string>
    <string name="title_activity_anti_natal">Anti Natal</string>
    <string name="title_activity_stock_note">StockNote</string>
    <string name="title_activity_create_appointment">Create Appointment Activity</string>
   	<string name="title_activity_parity_details">Parity_details</string>
    <string name="title_activity_obstretic_history">ObstreticHistory</string>

    <!-- MAIN SCREEN -->
    <string name="main_logo"> main_logo</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="smart">Smart</string>
    <string name="secure_maternity">Secure Maternity</string>
    <string name="appointment_recording">Appointment Recording</string>
    <string name="tracker">Tracker</string>
    <string name="maternity_hospital">© National Maternity Hospital, Ireland</string>
    <string name="about">About</string>
    <string name="about_link"><a href="http://www.nmh.ie/about-us.8.html">About</a></string>

    <!-- QUICK MENU -->
    <string name="patient_info">Patient Info</string>
    <string name="calendar">Calendar</string>
    <string name="todays_appointments">Today\'s Appointments</string>

    <!-- SPINNER TITLES -->
    <string name="appointment_type">Appointment Type</string>
    <string name="clinic_option">Clinic Option</string>
    <string name="visit_option">Visit Option</string>
    <string name="show_appointment">Show Appointment</string>

    <!-- APPOINTMENT SPINNER -->
    <string-array name="appointment_type">
        <item>Select Appointment Type</item>
        <item>Clinics</item>
        <item>Visits</item>
    </string-array>

    <!-- SERVICE OPTIONS SPINNER -->
    <string-array name="clinic_service_option">
        <item>Select Service Option</item>
        <item>Domino Dublin</item>
        <item>Domino Wicklow</item>
        <item>ETH Dublin</item>
        <item>ETH Wicklow</item>
        <item>Satellite</item>
    </string-array>

    <!-- VISIT OPTIONS SPINNER -->
    <string-array name="visit_service_option">
        <item>Select Visit Option</item>
        <item>Visit 1</item>
        <item>Visit 2</item>
        <item>Visit 3</item>
    </string-array>

    <!-- CLINICS OPTION SPINNER -->
    <string-array name="domino_dublin">
        <item>Select Clinic</item>
        <item>Evening Booking Clinic</item>
        <item>Leopardstown</item>
        <item>Dun laoghaire</item>
        <item>Churchtown</item>
        <item>NMH</item>
        <item>Home Visits</item>
    </string-array>
    <string-array name="domino_wicklow">
        <item>Select Clinic</item>
        <item>Greystones (Monday)</item>
        <item>Greystones (Tuesday)</item>
        <item>Kilmacanogue</item>
        <item>Home Visits</item>
    </string-array>
    <string-array name="eth">
        <item>Select Clinic</item>
        <item>Ballinteer</item>
        <item>Dun laoghaire</item>
    </string-array>
    <string-array name="satellite">
        <item>Select Clinic</item>
        <item>Greystones</item>
        <item>Arklow</item>
        <item>Newtownmountkennedy</item>
        <item>Bray</item>
    </string-array>
    <string-array name="weeks">
        <item>Select Week</item>
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
        <item>Week 5</item>
        <item>Week 6</item>
        <item>Week 7</item>
    </string-array>
    <string-array name="days">
        <item>Select Day</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!-- SELECT TIME -->
    <string name="one_select_time">08:30am</string>
    <string name="two_select_time">08:45am</string>
    <string name="three_select_time">09:00am</string>
    <string name="four_select_time">09:15am</string>
    <string name="five_select_time">09:30am</string>
    <string name="six_select_time">09:45am</string>

    <!-- "CONFIRM_APPOINTMENT -->
    <string name="service_user">Service User</string>
    <string name="hospital_number">Hospital Number</string>
    <string name="appointment_clinic">Appointment Clinic</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="duration">Duration</string>
    <string name="email_to">Email to:</string>
    <string name="sms_to">SMS to:</string>
    <string name="confirm_appointment">Confirm Appointment</string>

    <!-- SERVICE USERS -->
    <string name="ante_natal">Ante-Natal</string>
    <string name="personal">Personal</string>
    <string name="post_natal">Post-Natal</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="next_of_kin">Next-of-kin</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="title_activity_service_user_search">Service User Search Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- SERVICE USER SEARCH -->
    <string name="ssr_title">Search by the service user\'s hospital number,
        					 name and\/or dat of birth (@dd\/mm\/yyyy) \n
        					 You can combine search terms in one line if you like. \n
        					 Example: Mary Murphy @17/06/1976</string>
    <string name="enter_search">Enter Search Parameters</string>
    <string name="search_result">Search Results</string>
    <string name="btn_search">Search</string>

    <!-- LOGOUT SESSION -->
    <string name="Yes"> Yes</string>
    <string name="No"> No</string>
    <string name="Logout_dialog_message">Are you sure you want to Logout?</string>
    <string name="Logout_title">Logout</string>

    <!-- CONTACT DIALOG BOX -->
    <string name="Yes_make_call"> Yes</string>
    <string name="No_make_call"> No</string>
    <string name="contact_dialog_message">Select The Option</string>
    <string name="phone_call">Phone Call</string>
    <string name="sms">Send SMS</string>
    <string name="email">Email</string>
    <string name="user_address_title">Google Maps</string>
    <string name="user_address_message">Are you sure you want to go to Google Maps?</string>
    <string name="cancel">Cancel</string>

    <!-- CONTACT DETAILS -->
    <string name="midwife_name">Name:</string>
    <string name="midwife_email">Email:</string>
    <string name="primary_number">Primary No. :</string>
    <string name="secondary_number">Secondary No. :</string>
        
    <!-- APPOINTMENT CALENDAR -->
    <string name="clinic_title">Clinic Name</string>
    <string name="prev_button">Prev</string>
    <string name="date_button">Date</string>
    <string name="next_button">Next</string>    
    
    <!--  Stock Note -->
    <string name="clinic_name">Clinic Name</string>
    <string name="save_note">Save note</string>
    
    <!-- ANTE NATAL -->
	<string name="age">Age</string>
    <string name="edd">EDD</string>
    <string name="gestation">Gestation</string>
    <string name="blood_group">Blood group</string>
    <string name="rhesus">Rhesus</string>
    <string name="parity">Parity</string>
    <string name="obstretic_history">Obstretic history</string>
  
    <!-- PARITY DETAILS -->
    <string name="date_of_birth">Date of birth</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="mode_of_birth">Mode of birth</string>
    
    <!-- POST NATAL -->
    <string name="mother_info">Mother</string>
    <string name="birth_mode">Birth Mode</string>
    <string name="perineum">perineum</string>
    <string name="anti_d">Anti D</string>
    <string name="midwives_notes">Midwives Notes</string>
    <string name="baby_info">Baby</string>
    <string name="delivery_date">Date of delivery</string>
    <string name="delivery_time">Time of delivery</string>
    <string name="days_sinceBirth">Days since birth</string>
    <string name="sex_of_baby">Sex of baby</string>
    <string name="birth_weight">Birth Weight(kg)</string>
    <string name="vit_k">VitK</string>
    <string name="baby_hearing">Hearing</string>
    <string name="baby_feeding">Feeding</string>
    <string name="nbst">NBST</string>

    <!-- OBSTRETIC HISTORY -->
    <string name="patient_name">Sarah MacLachlann-Murphy</string>
    <string name="history_notebutton">Add note to history</string>
    <string name="add_note">Add a note</string>

 	<!-- CREATE APPOINTMENT -->
 	<string-array name="visit_duration_list">
        <item>Select Visit Duration</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="visit_priority_list">
        <item>Select Visit Priority</item>
        <item>Scheduled</item>
    </string-array>
    <string-array name="visit_type_list">
        <item>Select Visit Type</item>
        <item>Ante-Natal</item>
        <item>Post-Natal</item>
 	</string-array>
 	    <string-array name="visit_time_list">
        <item>Select Visit Time</item>
        <item>10:45:00</item>
        <item>11:00:00</item>
        <item>11:15:00</item>
        <item>11:30:00</item>
 	</string-array>
 	
 	<string-array name="clinic_name_list">
 	    <item>Select Clinic</item>
 	    <item>Evening Booking Clinic (Monday)</item>
 	    <item>Leopardstown (Tuesday)</item>
 	    <item>Dun Laoghaire (Wednesday)</item>
 	    <item>Churchtown (Thursday)</item>
 	    <item>NMH Clinic (Friday)</item>
 	    <item>Greystones (Monday)</item>
 	    <item>Greystones (Tuesday)</item>
 	    <item>Kilmacanogue (Thursday)</item>
 	    <item>Ballinteer (Monday)</item>
 	    <item>Dun Laoghaire (Tuesday)</item>
 	    <item>Greystones Satellite (Monday)</item>
 	    <item>Arklow (Tuesday)</item>
 	    <item>Newtownmountkennedy (Wednesday)</item>
 	    <item>Bray (Thursday)</item>
 	</string-array>
</resources>