<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="2.0"
    tools:context="${relativePackage}.${activityClass}" 
    android:background="@color/white">
    
  <ImageView
      android:contentDescription="@string/main_logo"
      android:id="@+id/imageView"
      android:layout_gravity="center|top"
      android:layout_marginTop="10dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/logo"
	/>  
	
    <TextView
      android:layout_gravity="center|top"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/smart"
      android:textSize="18sp"
      android:layout_marginTop="15dp"
	/> 
	
     <TextView
      android:layout_gravity="center|top"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/secure_maternity"
      android:textSize="20sp"
      android:textColor="@color/blue"
	/>  
	 <TextView
      android:layout_gravity="center|top"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/appointment_recording"
      android:textSize="20sp"
      android:textColor="@color/blue"/>
	
	
	<TextView
      android:layout_gravity="center|top"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tracker"
      android:textSize="20sp"
      android:textColor="@color/blue"/>


	<EditText
	    android:id="@+id/username"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:gravity="center" 
    	android:inputType ="text" 
    	android:hint="@string/username" 
    	android:background="@drawable/drawable"
    	android:layout_marginTop="20dp"
    	android:layout_marginBottom="20dp"
    	android:maxLines="1">
    </EditText>
    
    <EditText 
	    android:id="@+id/password"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:gravity="center" 
	    android:inputType ="textPassword" 
	    android:hint="@string/password" 
	    android:background="@drawable/drawable"
	    android:layout_marginBottom="20dp"
	    android:maxLines="1">
    </EditText>  
          
	<Button
		android:id="@+id/login"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@color/blue"
		android:text="@string/login" 
	/>  
	
   <TextView
      android:layout_gravity="center|top"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:textColor="@color/black"
      android:text="@string/maternity_hospital"/>
   
     <TextView
      android:layout_gravity="center|top"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/blue"
      android:textSize="20sp"
      android:text="@string/about"/>
   

	
</LinearLayout>