<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/kin_Phone_Call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable"
        android:text="@string/phone_call" />

    <Button
        android:id="@+id/kin_Send_SMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable"
        android:text="@string/sms" />

    <Button
        android:id="@+id/kin_Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable"
        android:text="@string/cancel" />
</LinearLayout>