<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}">

    <TextView
        android:id="@+id/service_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Xsmall"
        android:text="@string/service_user"
        android:textStyle="bold"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/service_user_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Xsmall" />

    <TextView
        android:id="@+id/hospital_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/hospital_number"
        android:textStyle="bold"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/hospital_number_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Xsmall" />

    <TextView
        android:id="@+id/appointment_clinic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/appointment_clinic"
        android:textStyle="bold"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/appointment_clinic_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Xsmall" />

    <TextView
        android:id="@+id/appointment_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/appointment_date"
        android:textStyle="bold"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/appointment_date_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Xsmall" />

    <TextView
        android:id="@+id/appointment_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/appointment_time"
        android:textStyle="bold"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/appointment_time_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Xsmall" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/duration"
        android:textStyle="bold"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/duration_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Xsmall" />

    <TextView
        android:id="@+id/email_to"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/email_to"
        android:textStyle="bold"
        android:textSize="@dimen/text_small" />

    <TextView
        android:id="@+id/email_to_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Xsmall" />

    <TextView
        android:id="@+id/sms_to"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:text="@string/sms_to" 
        android:textStyle="bold"
        android:textSize="@dimen/text_small"/>

    <TextView
        android:id="@+id/sms_to_db"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_Xsmall" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2.0" >

        <Button
            android:id="@+id/book_appointment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:background="@color/blue"
            android:text="@string/book_appointment"
            android:layout_weight="1.0" />

        <Button
            android:id="@+id/patient_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_medium"
            android:background="@color/blue"
            android:text="Patient Info" 
            android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>